--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
   font-size: 4rem;
   top: 50%;
   transform: translateY(-50%);
-  color: rgba(255, 255, 255, .5);
+  color: BLACK;
   cursor: pointer;
   border-radius: .25rem;
   padding: 0 .5rem;
@@ -72,7 +72,7 @@ body {
 .carousel-button:hover,
 .carousel-button:focus {
   color: white;
-  background-color: rgba(0, 0, 0, .2);
+  background-color: GREEN;
 }
 
 .carousel-button:focus {
@@ -80,11 +80,11 @@ body {
 }
 
 .carousel-button.prev {
-  left: 1rem;
+  left: 0rem;
 }
 
 .carousel-button.next {
-  right: 1rem;
+  right: 0rem;
 }
 </style>
 <body>
