--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img {vertical-align: middle;}
   margin-top: -22px;
   color: black;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 50px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -44,7 +44,8 @@ img {vertical-align: middle;}
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color:black;
+opacity: 
+  background-color:white;
 }
 
 /* Caption text */
