--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@ img {vertical-align: middle;}
   top: 50%;
   width: auto;
   padding: 50px;
-  margin-top: -22px;
+  margin-top: -100px;
+  margin-right: -100px;
+   margin-left: -100px;
   color: black;
   font-weight: bold;
   font-size: 50px;
