--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ img {vertical-align: middle;}
   top: 50%;
   width: auto;
   padding: 50px;
-  margin-top: 200px;
-  margin-right: -5px;
-   margin-left: -5px;
+  margin-top: auto;
+  margin-right: auto;
+   margin-left: auto;
   color: black;
   font-weight: bold;
   font-size: 50px;
