--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@ img {vertical-align: middle;}
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+   
+  top: 100%;
+  border: 2px solid green;
   width: auto;
-  padding: 50px;
+  padding: 20px;
   margin-top: auto;
   margin-right: auto;
    margin-left: auto;
   color: black;
   font-weight: bold;
-  font-size: 50px;
+  font-size: 20px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
