--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
 
  body {
             
-           background-color: #d8e8d6; /* sage green color */
+           background-color: #fffbf7; /* sage green color */
         }
+		
+		
+		
+		
+        .container {
+            background: #87ae73;
+			color: white;
+			opacity: 0.80;
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+			 
+            align-items: center;
+			
+			border-radius: 10px;
+			margin-top: 5%;
+			margin-right: auto;
+			margin-bottom: auto;
+			margin-left: auto;
+			animation: moveUp 2s infinite alternate;
+        }
+		
+			 @keyframes moveUp {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-10px); }
+        }
+
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
@@ -124,7 +151,7 @@ opacity:
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
-
+<div class="container"><h2><center>WEDDING VIDEO SOON HERE</h2><div class="arrow"></div></div></ccenter>
 <script>
 let slideIndex = 1;
 showSlides(slideIndex);
