--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 
 
-<center><a href="#rsvp" class="inline-block bg-transparent border-2 border-white text-black px-8 py-3 rounded-full hover:bg-white hover:text-gray-900 transition duration-300">Home</a></center>
+<center><a href="https://weddingiankellyandjenalyn.github.io/wedding-home/" class="inline-block bg-transparent border-2 border-white text-black px-8 py-3 rounded-full hover:bg-white hover:text-gray-900 transition duration-300">Home</a></center>
  <class="bg-[#FFFDD0] min-h-screen flex items-center justify-center p-4 overflow-hidden">
     <div class="relative w-full max-w-4xl mx-auto">
         <!-- Slideshow Container -->
